*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166000 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/org/apache/myfaces/context/resource/FacesApiMessages.properties
+++ b/src/myfaces/org/apache/myfaces/context/resource/FacesApiMessages.properties
@@ -20,3 +20,18 @@ javax.faces.validator.DoubleRangeValidator.MAXIMUM  = ERROR | Validation Error |
 javax.faces.validator.DoubleRangeValidator.MINIMUM  = ERROR | Validation Error | Value is smaller than allowed minimum of {0}.
 javax.faces.validator.DoubleRangeValidator.TYPE     = ERROR | Validation Error | Value not of correct type.
 
+javax.faces.validator.LengthValidator.LIMIT    = ERROR | Validation Error | Maximum or minimum attribute not of correct type.
+javax.faces.validator.LengthValidator.MAXIMUM  = ERROR | Validation Error | Value exceeds allowed maximum of {0}.
+javax.faces.validator.LengthValidator.MINIMUM  = ERROR | Validation Error | Value is smaller than allowed minimum of {0}.
+
+javax.faces.validator.RequiredValidator.FAILED= ERROR | Validation Error | Value is required.
+
+javax.faces.validator.LongRangeValidator.LIMIT    = ERROR | Validation Error | Maximum or minimum attribute not of correct type.
+javax.faces.validator.LongRangeValidator.MAXIMUM  = ERROR | Validation Error | Value exceeds allowed maximum of {0}.
+javax.faces.validator.LongRangeValidator.MINIMUM  = ERROR | Validation Error | Value is smaller than allowed minimum of {0}.
+javax.faces.validator.LongRangeValidator.TYPE     = ERROR | Validation Error | Value not of correct type.
+
+javax.faces.validator.StringRangeValidator.LIMIT    = ERROR | Validation Error | Maximum or minimum attribute not of correct type.
+javax.faces.validator.StringRangeValidator.MAXIMUM  = ERROR | Validation Error | Value exceeds allowed maximum of {0}.
+javax.faces.validator.StringRangeValidator.MINIMUM  = ERROR | Validation Error | Value is smaller than allowed minimum of {0}.
+javax.faces.validator.StringRangeValidator.TYPE     = ERROR | Validation Error | Value not of correct type.
