*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166009 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/org/apache/myfaces/context/resource/FacesImplMessages.properties
+++ b/src/myfaces/org/apache/myfaces/context/resource/FacesImplMessages.properties
@@ -22,3 +22,5 @@ net.sourceforge.myfaces.convert.impl.BooleanConverter.EXCEPTION     = ERROR | In
 net.sourceforge.myfaces.convert.impl.DateConverter.EXCEPTION        = ERROR | Input Error | Specified value is not a valid date.
 net.sourceforge.myfaces.convert.impl.DateTimeConverter.EXCEPTION    = ERROR | Input Error | Specified value is not a valid date/time.
 net.sourceforge.myfaces.convert.impl.TimeConverter.EXCEPTION        = ERROR | Input Error | Specified value is not a valid time.
+
+net.sourceforge.myfaces.renderkit.html.ErrorsRenderer.IN_FIELD      = INFO | \u0020at {0} |
