*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166027 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -74,9 +74,9 @@
                         includes="*.tld"
                         prefix="META-INF/"/>
             <!-- faces-config.xml -->
-            <zipfileset dir="${project.dir}/doc"
+            <!--zipfileset dir="${project.dir}/doc"
                         includes="faces-config.xml"
-                        prefix="META-INF/"/>
+                        prefix="META-INF/"/-->
         </jar>
 
         <!-- remove temporary files -->
