--- a/webapps/examples/src/faces.properties
+++ b/webapps/examples/src/faces.properties
@@ -2,9 +2,8 @@
 # This file configures the mappings from factory names to factory implementations.
 # See javax.faces.FactoryFinder.
 #
-javax.faces.render.RenderKitFactory=net.sourceforge.myfaces.renderkit.RenderKitFactoryImpl
-javax.faces.lifecycle.LifecycleFactory=net.sourceforge.myfaces.lifecycle.LifecycleFactoryImpl
-javax.faces.tree.TreeFactory=net.sourceforge.myfaces.tree.TreeFactoryImpl
+javax.faces.application.ApplicationFactory=net.sourceforge.myfaces.application.ApplicationFactoryImpl
 javax.faces.context.FacesContextFactory=net.sourceforge.myfaces.context.FacesContextFactoryImpl
-javax.faces.context.MessageResourcesFactory=net.sourceforge.myfaces.context.MessageResourcesFactoryImpl
-
+javax.faces.lifecycle.LifecycleFactory=net.sourceforge.myfaces.lifecycle.LifecycleFactoryImpl
+javax.faces.render.RenderKitFactory=net.sourceforge.myfaces.renderkit.RenderKitFactoryImpl
+javax.faces.tree.TreeFactory=net.sourceforge.myfaces.tree.TreeFactoryImpl
