--- a/manifest.properties
+++ b/manifest.properties
@@ -1,3 +1,5 @@
 manifest.impl.title=MyFaces
-manifest.impl.version=0.3.2
 manifest.impl.vendor=MyFaces Project Team
+
+# don't forget to update vesrion in examples/web/inc/page_header.jsp !
+manifest.impl.version=0.4.0
