*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166039 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -74,9 +74,12 @@
                         includes="*.tld"
                         prefix="META-INF/"/>
             <!-- faces-config.xml -->
-            <!--zipfileset dir="${project.dir}/doc"
+            <zipfileset dir="${project.dir}/conf"
                         includes="faces-config.xml"
-                        prefix="META-INF/"/-->
+                        prefix="META-INF/"/>
+            <zipfileset dir="${project.dir}/conf"
+                        includes="message_resources_*.xml"
+                        prefix="META-INF/"/>
         </jar>
 
         <!-- remove temporary files -->
