*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166047 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/build.xml
+++ b/webapps/examples/build.xml
@@ -86,8 +86,7 @@
             <tarfileset dir="${examples.src}"
                         prefix="myfaces-${manifest.impl.version}/webapps/examples/src"/>
             <tarfileset dir="${examples.web}"
-                        excludes="WEB-INF/lib/jsf-api.jar,
-                                  WEB-INF/web_ss.xml"
+                        excludes="WEB-INF/lib/jsf-api.jar"
                         prefix="myfaces-${manifest.impl.version}/webapps/examples/web"/>
             <tarfileset dir="${basedir}"
                         includes="*"
