*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166084 13f79535-47bb-0310-9956-ffa450edef68

--- a/conf/web.xml
+++ b/conf/web.xml
@@ -133,6 +133,13 @@
         </description>
     </context-param>
 
+    <context-param>
+        <param-name>myfaces_DefaultLanguage</param-name>
+        <param-value>en</param-value>
+        <description>
+            The default language for message resources.
+        </description>
+    </context-param>
 
     <!-- WelcomeFile Filter -->
     <!--
