*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166086 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -17,6 +17,7 @@ nav_Options         = Options
 nav_Components      = Components
 nav_Selectbox       = Selectboxes (CarConfigurator)
 nav_FileUpload      = File upload
+nav_TabbedPane      = Tabbed Pane
 
 
 alt_logo = MyFaces - the open source JSF implementation
