*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166089 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.properties.sample
+++ b/build.properties.sample
@@ -23,3 +23,7 @@ javac.optimize = off
 # uncomment to use aspectj for performance measuring
 # (you must also adapt the paths in src/aspectj/build.properties!)
 #use-aspectj = true
+
+
+# junit library (only needed for JUnit testing)
+junit.jar = ${project.dir}/lib/junit.jar
