*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166169 13f79535-47bb-0310-9956-ffa450edef68

--- a/conf/web.xml
+++ b/conf/web.xml
@@ -144,6 +144,7 @@
             RuntimeException, because the default error handler only logs the
             execption message but not the stack trace. Enabling this option, the exception
             handling is enhanced by logging the full stack trace.
+            Default value is true.
         </description>
     </context-param>
 
