--- a/conf/web.xml
+++ b/conf/web.xml
@@ -135,7 +135,7 @@
 
     <context-param>
         <param-name>myfaces_WrapPageContext</param-name>
-        <param-value>true</param-value>
+        <param-value>false</param-value>
         <description>
             If true, the JspFactory of the servlet container is wrapped by
             the class net.sourceforge.myfaces.webapp.JspFactoryWrapper to enhance
@@ -144,7 +144,7 @@
             RuntimeException, because the default error handler only logs the
             execption message but not the stack trace. Enabling this option, the exception
             handling is enhanced by logging the full stack trace.
-            Default value is true.
+            Default value is false because JRun does not like it (ClassCastException).
         </description>
     </context-param>
 
