*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166184 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.properties.sample
+++ b/build.properties.sample
@@ -6,6 +6,9 @@ servlet.jar = ${project.dir}/lib/servlet.jar
 # File path to com.oreilly.servlet package
 cos.jar = ${project.dir}/lib/cos.jar
 
+# File path to commons logging package
+commons-logging.jar = ${project.dir}/lib/commons-logging.jar
+
 # File path to JavaServer Faces API archive version 1.0 EA3
 # (not included, please download from http://java.sun.com/j2ee/javaserverfaces/download.html)
 jsf-api.jar = ${project.dir}/lib/jsf-api.jar
