--- a/webapps/examples/build.xml
+++ b/webapps/examples/build.xml
@@ -65,6 +65,7 @@
             <fileset file="${cos.jar}"/>
             <fileset file="${jsf-api.jar}"/>
             <fileset file="${myfaces.jar}"/>
+            <fileset file="${commons-logging.jar}"/>
         </copy>
 
         <copy file="${project.dir}/conf/web.xml" todir="${examples.web}/WEB-INF" />
