*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166190 13f79535-47bb-0310-9956-ffa450edef68

--- a/manifest.properties
+++ b/manifest.properties
@@ -1,5 +1,5 @@
 manifest.impl.title=MyFaces
 manifest.impl.vendor=MyFaces Project Team
 
-# don't forget to update vesrion in examples/web/inc/page_header.jsp !
+# don't forget to update version in examples/web/inc/page_header.jsp !
 manifest.impl.version=0.4.4
