--- a/conf/faces.properties
+++ b/conf/faces.properties
@@ -2,6 +2,7 @@
 # This file configures the mappings from factory names to factory implementations.
 # See javax.faces.FactoryFinder.
 #
+# TODO: remove (see faces-config.xml)
 javax.faces.application.ApplicationFactory=net.sourceforge.myfaces.application.ApplicationFactoryImpl
 javax.faces.context.FacesContextFactory=net.sourceforge.myfaces.context.FacesContextFactoryImpl
 javax.faces.lifecycle.LifecycleFactory=net.sourceforge.myfaces.lifecycle.LifecycleFactoryImpl
