--- a/webapps/examples/build.xml
+++ b/webapps/examples/build.xml
@@ -67,6 +67,7 @@
             <fileset file="${myfaces.jar}"/>
             <fileset file="${commons-logging.jar}"/>
             <fileset file="${log4j.jar}"/>
+            <fileset file="${commons-collections.jar}"/>
         </copy>
 
         <copy file="${project.dir}/conf/web.xml" todir="${examples.web}/WEB-INF" />
