--- a/build.xml
+++ b/build.xml
@@ -22,6 +22,7 @@
         <pathelement location="${servlet.jar}"/>
         <pathelement location="${cos.jar}"/>
         <pathelement location="${commons-logging.jar}"/>
+        <pathelement location="${commons-collections.jar}"/>
     </path>
 
 
