--- a/webapps/examples/src/log4j.properties
+++ b/webapps/examples/src/log4j.properties
@@ -22,4 +22,5 @@ log4j.logger.net.sourceforge.myfaces=DEBUG
 
 
 log4j.logger.net.sourceforge.myfaces.config=INFO
-log4j.logger.net.sourceforge.myfaces.application=INFO
+log4j.logger.net.sourceforge.myfaces.config.configure=DEBUG
+log4j.logger.net.sourceforge.myfaces.application=DEBUG
