--- a/webapps/examples/src/log4j.properties
+++ b/webapps/examples/src/log4j.properties
@@ -15,12 +15,12 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 # myfaces logger
-log4j.logger.net.sourceforge.myfaces=DEBUG
+log4j.logger.net.sourceforge.myfaces=INFO
 
 # HACK: remove annoying "inconsistency with TLD" message
 ##log4j.logger.net.sourceforge.myfaces.config.FacesConfigFactoryBase=ERROR
 
 
 log4j.logger.net.sourceforge.myfaces.config=INFO
-log4j.logger.net.sourceforge.myfaces.config.configure=DEBUG
-log4j.logger.net.sourceforge.myfaces.application=DEBUG
+log4j.logger.net.sourceforge.myfaces.application=INFO
+log4j.logger.net.sourceforge.myfaces.lifecycle=INFO
