--- a/webapps/examples/src/log4j.properties
+++ b/webapps/examples/src/log4j.properties
@@ -23,7 +23,6 @@ log4j.logger.net.sourceforge.myfaces=INFO
 
 log4j.logger.net.sourceforge.myfaces.config=INFO
 log4j.logger.net.sourceforge.myfaces.application=INFO
-
 log4j.logger.net.sourceforge.myfaces.lifecycle=DEBUG
-
 log4j.logger.net.sourceforge.myfaces.taglib=DEBUG
+log4j.logger.net.sourceforge.myfaces.util.DebugUtils=INFO
