--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -4,7 +4,7 @@ today = Today is the {0,date,short}.
 
 nav_Home            = Home
 nav_Examples        = Examples
-nav_Sample_1        = Sample 1 (with Validators)
+nav_Sample_1        = Sample 1
 nav_Sample_2        = Sample 2
 nav_Simple_list     = Simple List
 nav_Sortable_list   = Sortable List
@@ -15,7 +15,7 @@ nav_Contact         = Contact
 nav_Copyright       = Copyright
 nav_Options         = Options
 nav_Components      = Components
-nav_Selectbox       = Selectboxes (CarConfigurator)
+nav_Selectbox       = Selectboxes
 nav_FileUpload      = File upload
 nav_TabbedPane      = Tabbed Pane
 
