--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -6,7 +6,7 @@ nav_Home            = Home
 nav_Examples        = Examples
 nav_Sample_1        = Sample 1
 nav_Sample_2        = Sample 2
-nav_Simple_list     = Simple Master/Detail List
+nav_Simple_list     = Master/Detail Example
 nav_Sortable_list   = Sortable List
 nav_Documentation   = Documentation
 nav_Features        = Features
