--- a/webapps/examples/src/log4j.properties
+++ b/webapps/examples/src/log4j.properties
@@ -26,3 +26,5 @@ log4j.logger.net.sourceforge.myfaces.application=INFO
 log4j.logger.net.sourceforge.myfaces.lifecycle=DEBUG
 log4j.logger.net.sourceforge.myfaces.taglib=DEBUG
 log4j.logger.net.sourceforge.myfaces.util.DebugUtils=INFO
+
+log4j.logger.net.sourceforge.myfaces.application.jsp=DEBUG
