--- a/webapps/examples/src/log4j.properties
+++ b/webapps/examples/src/log4j.properties
@@ -25,6 +25,6 @@ log4j.logger.net.sourceforge.myfaces.config=INFO
 log4j.logger.net.sourceforge.myfaces.application=INFO
 log4j.logger.net.sourceforge.myfaces.lifecycle=DEBUG
 log4j.logger.net.sourceforge.myfaces.taglib=DEBUG
-log4j.logger.net.sourceforge.myfaces.util.DebugUtils=DEBUG
+log4j.logger.net.sourceforge.myfaces.util.DebugUtils=INFO
 
 log4j.logger.net.sourceforge.myfaces.application.jsp=DEBUG
