--- a/webapps/examples/src/log4j.properties
+++ b/webapps/examples/src/log4j.properties
@@ -16,15 +16,9 @@ log4j.appender.A1.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 # myfaces logger
 log4j.logger.net.sourceforge.myfaces=INFO
-
-# HACK: remove annoying "inconsistency with TLD" message
-##log4j.logger.net.sourceforge.myfaces.config.FacesConfigFactoryBase=ERROR
-
-
 log4j.logger.net.sourceforge.myfaces.config=INFO
 log4j.logger.net.sourceforge.myfaces.application=INFO
-log4j.logger.net.sourceforge.myfaces.lifecycle=DEBUG
-log4j.logger.net.sourceforge.myfaces.taglib=DEBUG
-log4j.logger.net.sourceforge.myfaces.util.DebugUtils=DEBUG
-
-log4j.logger.net.sourceforge.myfaces.application.jsp=DEBUG
+log4j.logger.net.sourceforge.myfaces.application.jsp=INFO
+log4j.logger.net.sourceforge.myfaces.lifecycle=INFO
+log4j.logger.net.sourceforge.myfaces.taglib=INFO
+log4j.logger.net.sourceforge.myfaces.util.DebugUtils=INFO
