new calendar component
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166527 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -18,6 +18,7 @@ nav_Components      = Components
 nav_Selectbox       = Selectboxes
 nav_FileUpload      = File upload
 nav_TabbedPane      = Tabbed Pane
+nav_Calendar        = Calendar
 
 #
 # buttons
