--- a/webapps/examples/src/log4j.properties
+++ b/webapps/examples/src/log4j.properties
@@ -22,3 +22,4 @@ log4j.logger.net.sourceforge.myfaces.application.jsp=INFO
 log4j.logger.net.sourceforge.myfaces.lifecycle=INFO
 log4j.logger.net.sourceforge.myfaces.taglib=INFO
 log4j.logger.net.sourceforge.myfaces.util.DebugUtils=INFO
+log4j.logger.net.sourceforge.myfaces.renderkit.html.HtmlResponseWriterImpl=WARN
