--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages.properties
@@ -63,3 +63,4 @@ sort_carcolor = Car color
 label_country_name = Country
 label_country_iso = Iso-Code
 new_country = Add New Country »
+country_edit_list = Edit all Countries » 
