*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166548 13f79535-47bb-0310-9956-ffa450edef68

--- a/conf/web.xml
+++ b/conf/web.xml
@@ -71,6 +71,16 @@
         </description>
     </context-param>
 
+    <context-param>
+        <param-name>myfaces_allow_designmode</param-name>
+        <param-value>false</param-value>
+        <description>
+            If true, implements design mode using CGLib binary class changes.
+            This creates a performance hit and should be used only when needed.
+            Default: "false"
+        </description>
+    </context-param>
+
 	<context-param>
 		<param-name>net.sourceforge.smile.descriptor.package</param-name>
 		<param-value>net.sourceforge.smile.demo</param-value>
